--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     ],
     "require": {
         "twig/twig": "^3.7",
-        "pecee/simple-router": "4.*"
+        "pecee/simple-router": "4.*",
+        "phpmailer/phpmailer": "^6.8",
+        "symfony/http-foundation": "^6.3"
         
     },
     "require-dev": {
