--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "twig/twig": "^3.7",
         "pecee/simple-router": "4.*",
         "phpmailer/phpmailer": "^6.8",
-        "symfony/http-foundation": "^6.3"
+        "symfony/http-foundation": "^6.3",
+        "symfony/routing": "^6.3"
         
     },
     "require-dev": {
