--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
     "require": {
         "twig/twig": "^3.7",
         "pecee/simple-router": "4.*",
-        "phpmailer/phpmailer": "^6.8",
-        "symfony/http-foundation": "^6.3",
-        "symfony/routing": "^6.3"
+        "phpmailer/phpmailer": "^6.8"
         
     },
     "require-dev": {
